fix overflow bug

--- a/app/assets/stylesheets/collections.css.scss
+++ b/app/assets/stylesheets/collections.css.scss
@@ -83,6 +83,7 @@
   }
   .productviews{
     margin-left: 600px; 
+    width: 540px;
   }
   .share{
     background: white;
